fixed z-index bug in skip content

--- a/src/atoms/skip/_skip.scss
+++ b/src/atoms/skip/_skip.scss
@@ -2,7 +2,7 @@
 
 @include b(skip) {
 	position: relative;
-	z-index: z_index(foreground);
+	z-index: z_index(1001);
 	height: 0;
 	margin: 0;
 	padding: 0;
@@ -25,7 +25,6 @@
 		border: 0;
 
 		&:focus {
-			z-index: z_index(foreground);
 			width: 100%;
 			height: auto;
 			padding-top: rhythm(1);
